Update tables manipulation notes

--- a/Notes/tables-manipulation/index.html
+++ b/Notes/tables-manipulation/index.html
@@ -26,6 +26,7 @@
     
     <button id="btn1">Click me to add a row!</button>
     <button id="btn2">Click me to add a new cell to row 2!</button>
+    <button id="btn3">Click to make Row 2 Col 1 yellow!</button>
 
     <script src="index.js"></script>
 
